# raytracing-weekend-rust

./: .gitignore  Cargo.toml
src/: bvh.rs  camera.rs  hit.rs  main.rs  material.rs  ray.rs  scenes.rs  util.rs  vec3.rs
src/hit/: bvh_node.rs  mod.rs  moving_sphere.rs  sphere.rs
src/material/: dialectric.rs  lambertian.rs  metal.rs  mod.rs
src/vec3/: mod.rs  not_simd.rs  simd.rs
