[package]
name = "raytracing-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rayon = "*"
enum_dispatch = "*"
console = "*"
indicatif = {version = "*", features = ["rayon"]}

[profile.dev]
opt-level = 3
codegen-units = 1

[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
codegen-units = 1
lto = "fat"
panic = "abort"
debug = false
incremental = false