[package]
name = "raytracing-rust"
version = "0.1.0"
edition = "2021"

[features]
default = ["simd"]
simd = []

[dependencies]
console = "*"
enum_dispatch = "*"
image = "*"
indicatif = {version = "*", features = ["rayon"]}
rand = "*"
rayon = "*"

[profile.dev]
opt-level = 3
codegen-units = 1

[profile.release]
opt-level = 3
overflow-checks = false
debug-assertions = false
codegen-units = 1
lto = "fat"
panic = "abort"
debug = false
incremental = false